# ProPIF

./: .gitignore  CMakeLists.txt  README.md  environment.yml  package.xml
configs/: pandaconfig.json  pandaconfig.yaml
images/: README.md
models/objects/: flower.mtl
models/scenes/: cube.urdf
propif_ros2/propif_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
propif_ros2/propif_bringup/launch/: system.launch.py
propif_ros2/propif_control/: package.xml  setup.cfg  setup.py
propif_ros2/propif_control/launch/: control.launch.py
propif_ros2/propif_control/propif_control/: control_node.py
propif_ros2/propif_msgs/: CMakeLists.txt  package.xml
propif_ros2/propif_msgs/msg/: PlaneInfo.msg
propif_ros2/propif_msgs/srv/: ComputeFK.srv  ComputeIK.srv  ExecuteJointCommand.srv  ExecuteJointTrajectory.srv  GetRobotState.srv
propif_ros2/propif_perception/: package.xml  setup.cfg  setup.py
propif_ros2/propif_perception/launch/: perception.launch.py
propif_ros2/propif_perception/propif_perception/: camera_loc_manager.py  feat_manager.py  perception_node.py  roi.py  twoDthreeDObjects.py
propif_ros2/propif_simulation/: package.xml  setup.cfg  setup.py
propif_ros2/propif_simulation/launch/: simulation.launch.py
propif_ros2/propif_simulation/propif_simulation/: simulation_node.py
propif_ros2/src/propif_perception/: package.xml  setup.py
propif_ros2/tests/: test_curobo.py
scripts/: Pan3d.py  camera_loc_manager.py  demo_hloc.ipynb  feat_manager.py  main.py  realsense_recorder.py  realsense_test.py  roi.py  testing_fast_glue.py  twoDthreeDObjects.py
tests/: test_SAM.py  testing_sam.py  testing_sem_sam.py
video/: video_list_link.txt
