<!-- file: propif_ros2/src/propif_perception/package.xml -->
<package format="3">
  <name>propif_perception</name>
  <version>0.0.1</version>
  <description>
    ROS2 Python package for perception with Intel RealSense RGB-D, 
    YOLO / FastSAM object detection, PyBullet simulation, etc.
  </description>
  
  <maintainer email="minchuan.yang.24@ucl.ac.uk">Steve Yang</maintainer>
  <license>Apache-2.0</license>
  
  <!-- Build dependencies (Python) -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- 运行依赖 -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>vision_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>realsense2_camera</depend>
  <depend>pybullet</depend>
  <depend>nav_msgs</depend>
  <depend>urdf</depend>
  <depend>trajectory_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
